--- a/pixi.toml
+++ b/pixi.toml
@@ -1,7 +1,7 @@
 [project]
 name = "msquant"
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-64", "osx-arm64"]
+platforms = ["linux-64"]
 
 [tasks]
 # Run the NiceGUI app (dev)
