--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -43,11 +43,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Download and install pre-compiled llama.cpp binary
 RUN curl -L -o /tmp/llama.zip https://github.com/ggml-org/llama.cpp/releases/download/${LLAMA_CPP_VERSION}/llama-${LLAMA_CPP_VERSION}-bin-ubuntu-x64.zip && \
     unzip -q /tmp/llama.zip -d /tmp/llama-extract && \
-    EXTRACTED_DIR=$(find /tmp/llama-extract -maxdepth 1 -type d -name "llama-*" | head -1) && \
-    if [ -z "$EXTRACTED_DIR" ]; then echo "Error: No llama directory found after extraction"; ls -la /tmp/llama-extract; exit 1; fi && \
-    mv "$EXTRACTED_DIR" /opt/llama.cpp && \
+    mv /tmp/llama-extract/build /opt/llama.cpp && \
     rm -rf /tmp/llama.zip /tmp/llama-extract && \
-    chmod +x /opt/llama.cpp/llama-* && \
+    chmod +x /opt/llama.cpp/bin/llama-* && \
     pip install gguf
 
 # Add llama.cpp to PATH
